<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:drawableLeft="@drawable/baseline_person_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:hint="@string/email_id"
                android:paddingLeft="5dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:importantForAutofill="no" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_btn"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dark_green"
                app:cornerRadius="20dp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_green"
                android:textSize="16sp" />

            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:id="@+id/googleBtn"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/not_yet_registered_signup_now"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/student_signup_now"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:layout_marginTop="-20dp"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/adminSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/admin_signup"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:layout_marginTop="-36dp"
                android:layout_marginStart="121dp"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>