<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".studentdata.SignUp_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/SignText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                android:gravity="center_horizontal" />
            <EditText
                android:id="@+id/nametext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/baseline_person_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:hint="@string/name"
                android:paddingLeft="5dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:importantForAutofill="no"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/emailtext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:paddingLeft="5dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_email_24" />

            <EditText
                android:id="@+id/phonetext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/baseline_phone_iphone_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:drawableStart="@drawable/baseline_phone_iphone_24"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/passwordtext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:paddingLeft="5dp"
                android:drawableStart="@drawable/baseline_lock_24" />

            <EditText
                android:id="@+id/confirmpassowrd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/baseline_lock_24" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/Signup_btn"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dark_green"
                app:cornerRadius="20dp"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/already_an_user_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/dark_green"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>